--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "salita",
-  "bin": "bin",
-  "version": "0.1.1",
+  "bin": "bin/salita",
+  "version": "0.1.2",
   "description": "Automatically upgrade all dependencies and devDependencies.",
   "main": "index.js",
   "dependencies": {
