Removed erroneous package.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "salita",
   "bin": "bin/salita",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Automatically upgrade all dependencies and devDependencies.",
   "main": "index.js",
   "dependencies": {
     "async": "~0.9.0",
     "chalk": "~0.4.0",
-    "npm": "~1.4.13",
-    "fjksdfjsdkflksdfj": "whatever"
+    "npm": "~1.4.13"
   },
   "devDependencies": {},
   "author": "Tim Branyen (@tbranyen)",
