--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "async": "~0.9.0",
     "chalk": "~0.4.0",
     "cli-table": "~0.3.0",
-    "npm": "~1.4.13"
+    "npm": "~1.4.13",
+    "json-file-plus": "~0.2.3"
   },
   "devDependencies": {},
   "author": "Tim Branyen (@tbranyen)",
   "license": "MIT"
 }
+
