--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.10",
   "description": "Automatically upgrade all dependencies and devDependencies.",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tbranyen/salita.git"
+  },
   "dependencies": {
     "async": "~0.9.0",
     "chalk": "~0.4.0",
