--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "url": "git://github.com/tbranyen/salita.git"
   },
   "dependencies": {
-    "async": "~0.9.0",
     "chalk": "~0.5.1",
     "cli-table": "~0.3.0",
+    "json-file-plus": "~1.0.5",
     "npm": "~1.4.24",
-    "json-file-plus": "~1.0.5"
+    "promise": "~5.0.0"
   },
   "devDependencies": {},
   "author": "Tim Branyen (@tbranyen)",
