--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cli-table": "~0.3.0",
     "json-file-plus": "~1.0.7",
     "npm": "~1.4.26",
+    "minimist": "~1.1.0",
     "promise": "~5.0.0"
   },
   "devDependencies": {},
