--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-file-plus": "~1.0.7",
     "npm": "~1.4.26",
     "minimist": "~1.1.0",
+    "object.assign": "~1.0.1",
     "promise": "~5.0.0"
   },
   "devDependencies": {},
