--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "npm": "~2.1.4",
     "minimist": "~1.1.0",
     "object.assign": "~1.0.1",
-    "promise": "~6.0.1"
+    "promise": "~6.0.1",
+    "semver": "~4.1.0"
   },
   "devDependencies": {
     "jscs": "~1.7.3"
