--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "Jordan Harband <ljharb@gmail.com> (https://github.com/ljharb/)"
   ],
   "dependencies": {
-    "chalk": "~0.5.1",
-    "cli-table": "~0.3.1",
-    "json-file-plus": "~2.0.0",
-    "npm": "~2.5.1",
-    "minimist": "~1.1.0",
-    "object.assign": "~1.1.1",
-    "promise": "~6.1.0",
-    "semver": "~4.2.0"
+    "chalk": "^1.0.0",
+    "cli-table": "^0.3.1",
+    "json-file-plus": "^3.0.0",
+    "npm": "^2.10.1",
+    "minimist": "^1.1.1",
+    "object.assign": "^2.0.1",
+    "promise": "^7.0.1",
+    "semver": "^4.3.4"
   },
   "devDependencies": {
     "jscs": "^1.13.1"
