--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "chalk": "^1.0.0",
     "cli-table": "^0.3.1",
     "json-file-plus": "^3.0.0",
-    "npm": "^2.11.2",
+    "npm": "3.0-latest",
     "minimist": "^1.1.1",
     "object.assign": "^3.0.0",
-    "promise": "^7.0.1",
+    "promise": "^7.0.3",
     "semver": "^4.3.6"
   },
   "devDependencies": {
