--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cli-table": "^0.3.1",
     "json-file-plus": "^3.0.0",
     "npm": "3.0-latest",
-    "minimist": "^1.1.1",
+    "yargs": "^3.13.0",
     "object.assign": "^3.0.0",
     "promise": "^7.0.3",
     "semver": "^4.3.6"
