--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "Jordan Harband <ljharb@gmail.com> (https://github.com/ljharb/)"
   ],
   "dependencies": {
-    "chalk": "^1.0.0",
+    "chalk": "^1.1.0",
     "cli-table": "^0.3.1",
     "json-file-plus": "^3.0.0",
-    "npm": "3.0-latest",
-    "yargs": "^3.13.0",
-    "object.assign": "^3.0.0",
+    "npm": "v3.x-next",
+    "yargs": "^3.14.0",
+    "object.assign": "^3.0.1",
     "promise": "^7.0.3",
     "semver": "^4.3.6"
   },
