--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "Automatically upgrade all dependencies and devDependencies.",
   "main": "index.js",
   "scripts": {
-    "lint": "jscs *.js bin/salita"
+    "lint": "npm run jscs && npm run eslint",
+    "eslint": "eslint *.js bin/salita",
+    "jscs": "jscs *.js bin/salita"
   },
   "repository": {
     "type": "git",
@@ -26,7 +28,9 @@
     "semver": "^5.0.1"
   },
   "devDependencies": {
-    "jscs": "^2.0.0"
+    "jscs": "^2.0.0",
+    "eslint": "^1.1.0",
+    "@ljharb/eslint-config": "^1.0.4"
   },
   "author": "Tim Branyen (@tbranyen)",
   "license": "MIT"
