--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "Jordan Harband <ljharb@gmail.com> (https://github.com/ljharb/)"
   ],
   "dependencies": {
-    "chalk": "^1.1.0",
+    "chalk": "^1.1.1",
     "cli-table": "^0.3.1",
-    "json-file-plus": "^3.0.0",
-    "npm": "v3.x-next",
-    "yargs": "^3.19.0",
-    "object.assign": "^3.0.1",
+    "json-file-plus": "^3.0.1",
+    "npm": "next",
+    "yargs": "^3.25.0",
+    "object.assign": "^4.0.1",
     "promise": "^7.0.4",
-    "semver": "^5.0.1"
+    "semver": "^5.0.3"
   },
   "devDependencies": {
     "jscs": "^2.1.1",
