--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salita",
-  "bin": "bin/salita",
+  "bin": "node bin/salita",
   "version": "0.8.2",
   "description": "Automatically upgrade all dependencies and devDependencies.",
   "main": "index.js",
