--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "chalk": "^1.1.1",
     "cli-table": "^0.3.1",
     "json-file-plus": "^3.0.1",
-    "npm": "next",
+    "npm": "^3.3.8",
     "yargs": "^3.27.0",
     "object.assign": "^4.0.1",
     "promise": "^7.0.4",
