Revert "[Fix] "bin" will now work on Windows, since Windows doesn't work with shebangs"
This reverts commit de0d1d02d441046a980d71c5fd47e769ff0a5151 and fixes #7.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salita",
-  "bin": "node bin/salita",
+  "bin": "bin/salita",
   "version": "0.8.3",
   "description": "Automatically upgrade all dependencies and devDependencies.",
   "main": "index.js",
