--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
 		"max-nested-callbacks": [2, 4],
 		"max-params": [2, 4],
 		"max-statements": [2, 14],
+		"max-statements-per-line": [2, { "max": 2 }],
 		"new-cap": [2, { "capIsNewExceptions": ["Range"] }],
 		"no-console": [0],
 		"no-process-exit": [1],
