--- a/.eslintrc
+++ b/.eslintrc
@@ -3,16 +3,22 @@
 
 	"extends": "@ljharb",
 
+	"env": {
+		"node": true
+	},
+
 	"rules": {
 		"consistent-return": [1],
 		"func-style": [0],
 		"global-require": [1],
+		"indent": [2, 2],
 		"max-nested-callbacks": [2, 4],
 		"max-params": [2, 4],
 		"max-statements": [2, 14],
 		"max-statements-per-line": [2, { "max": 2 }],
 		"new-cap": [2, { "capIsNewExceptions": ["Range"] }],
 		"no-console": [0],
+		"no-magic-numbers": [0],
 		"no-process-exit": [1],
 		"no-use-before-define": [1]
 	}
