--- a/package.json
+++ b/package.json
@@ -19,20 +19,23 @@
     "Jordan Harband <ljharb@gmail.com> (https://github.com/ljharb/)"
   ],
   "dependencies": {
-    "chalk": "^1.1.3",
+    "chalk": "^2.3.0",
     "cli-table": "^0.3.1",
+    "for-each": "^0.3.2",
     "json-file-plus": "^3.3.0",
-    "npm": "^3.10.8",
-    "yargs": "^5.0.0",
+    "npm": "^5.5.1",
     "object.assign": "^4.0.4",
-    "promise": "^7.1.1",
-    "semver": "^5.3.0",
-    "for-each": "^0.3.2"
+    "promise": "^8.0.1",
+    "semver": "^5.4.1",
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
     "@ljharb/eslint-config": "^12.2.1",
     "eslint": "^4.16.0",
     "jscs": "^3.0.7"
+  },
+  "engines": {
+    "node": ">= 4"
   },
   "author": "Tim Branyen (@tbranyen)",
   "license": "MIT"
