--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "for-each": "^0.3.2"
   },
   "devDependencies": {
-    "jscs": "^3.0.7",
-    "eslint": "^3.6.1",
-    "@ljharb/eslint-config": "^8.0.0"
+    "@ljharb/eslint-config": "^12.2.1",
+    "eslint": "^4.16.0",
+    "jscs": "^3.0.7"
   },
   "author": "Tim Branyen (@tbranyen)",
   "license": "MIT"
