--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
 		"func-style": 0,
 		"global-require": 1,
 		"indent": [2, 2],
+		"max-lines-per-function": 0,
 		"max-nested-callbacks": [2, 4],
 		"max-params": [2, 4],
 		"max-statements": [2, 14],
