--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
 		"no-console": 0,
 		"no-magic-numbers": 0,
 		"no-process-exit": 1,
-		"no-use-before-define": 1
+		"no-use-before-define": 1,
+		"operator-linebreak": [2, "before"],
 	}
 }
