--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,7 @@
 	},
 
 	"rules": {
-		"array-element-newline": 0,
 		"complexity": 0,
-		"consistent-return": 1,
 		"dot-notation": [2, { "allowKeywords": true }],
 		"func-name-matching": 1,
 		"func-style": 0,
@@ -27,5 +25,6 @@
 		"no-process-exit": 1,
 		"no-use-before-define": 1,
 		"operator-linebreak": [2, "before"],
+		"sort-keys": 0,
 	}
 }
