--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "cli-table": "^0.3.1",
     "for-each": "^0.3.3",
     "json-file-plus": "^3.3.1",
-    "npm": "^5.10.0",
     "object.assign": "^4.1.0",
     "promise": "^8.0.3",
     "semver": "^5.7.1",
+    "string.prototype.trim": "^1.2.1",
     "yargs": "^10.1.2"
   },
   "devDependencies": {
