--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	],
 	"dependencies": {
 		"chalk": "^2.4.2",
-		"cli-table": "^0.3.1",
+		"cli-table": "=0.3.1",
 		"for-each": "^0.3.3",
 		"json-file-plus": "^3.3.1",
 		"object.assign": "^4.1.0",
