--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
 	],
 	"dependencies": {
 		"chalk": "^2.4.2",
-		"cli-table": "^0.3.5",
+		"cli-table": "=0.3.6",
 		"for-each": "^0.3.3",
 		"json-file-plus": "^3.3.1",
 		"object.assign": "^4.1.2",
 		"promise": "^8.1.0",
 		"semver": "^5.7.1",
-		"string.prototype.trim": "^1.2.3",
+		"string.prototype.trim": "^1.2.5",
 		"yargs": "^10.1.2"
 	},
 	"devDependencies": {
