--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"scripts": {
 		"pretest": "npm run --silent lint",
 		"lint": "eslint --ext=js,mjs . 'bin/**'",
+		"posttest": "aud --production",
 		"version": "auto-changelog && git add CHANGELOG.md",
 		"postversion": "auto-changelog && git add CHANGELOG.md && git commit --no-edit --amend && git tag -f \"v$(node -e \"console.log(require('./package.json').version)\")\""
 	},
@@ -33,6 +34,7 @@
 	},
 	"devDependencies": {
 		"@ljharb/eslint-config": "^20.0.0",
+		"aud": "^1.1.5",
 		"auto-changelog": "^2.3.0",
 		"eslint": "^8.4.1"
 	},
