--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
 		"yargs": "^10.1.2"
 	},
 	"devDependencies": {
-		"@ljharb/eslint-config": "^21.0.1",
-		"aud": "^2.0.2",
+		"@ljharb/eslint-config": "^21.1.0",
+		"aud": "^2.0.4",
 		"auto-changelog": "^2.4.0",
-		"eslint": "^8.8.0"
+		"eslint": "=8.8.0"
 	},
 	"engines": {
 		"node": ">= 4"
