--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"devDependencies": {
 		"@ljharb/eslint-config": "^21.1.1",
 		"auto-changelog": "^2.5.0",
+		"encoding": "^0.1.13",
 		"eslint": "=8.8.0"
 	},
 	"engines": {
