--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 		"Jordan Harband <ljharb@gmail.com> (https://github.com/ljharb/)"
 	],
 	"dependencies": {
-		"chalk": "^2.4.2",
 		"cli-table": "^0.3.11",
+		"colors": "=1.4.0",
 		"for-each": "^0.3.3",
 		"json-file-plus": "^3.3.1",
 		"object.assign": "^4.1.7",
