--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"scripts": {
 		"pretest": "npm run --silent lint",
 		"lint": "eslint --ext=js,mjs . 'bin/**'",
+		"postlint": "tsc && attw -P",
 		"posttest": "npx npm@\">= 10.2\" audit --production",
 		"version": "auto-changelog && git add CHANGELOG.md",
 		"postversion": "auto-changelog && git add CHANGELOG.md && git commit --no-edit --amend && git tag -f \"v$(node -e \"console.log(require('./package.json').version)\")\""
@@ -33,10 +34,19 @@
 		"yargs": "^10.1.2"
 	},
 	"devDependencies": {
+		"@arethetypeswrong/cli": "^0.17.2",
 		"@ljharb/eslint-config": "^21.1.1",
+		"@ljharb/tsconfig": "^0.2.3",
+		"@types/cli-table": "^0.3.4",
+		"@types/for-each": "^0.3.3",
+		"@types/json-file-plus": "^3.3.6",
+		"@types/object.assign": "^4.1.0",
+		"@types/semver": "^6.2.7",
+		"@types/string.prototype.trim": "^1.2.0",
 		"auto-changelog": "^2.5.0",
 		"encoding": "^0.1.13",
-		"eslint": "=8.8.0"
+		"eslint": "=8.8.0",
+		"typescript": "next"
 	},
 	"engines": {
 		"node": ">= 4"
